// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block route > getAll > should get all 1`] = `
{
  "blocks": [
    {
      "blobAsCalldataGasUsed": 255000,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000,
      "excessBlobGas": 15000,
      "hash": "blockHash008",
      "number": 1008,
      "slot": 108,
      "timestamp": 2023-08-31T16:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
          ],
          "fromId": "address2",
          "hash": "txHash016",
          "toId": "address4",
        },
      ],
    },
    {
      "blobAsCalldataGasUsed": 255000,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000,
      "excessBlobGas": 15000,
      "hash": "blockHash007",
      "number": 1007,
      "slot": 107,
      "timestamp": 2023-08-31T14:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1300,
              },
              "blobHash": "blobHash004",
              "index": 0,
            },
            {
              "blob": {
                "size": 1300,
              },
              "blobHash": "blobHash004",
              "index": 1,
            },
            {
              "blob": {
                "size": 1300,
              },
              "blobHash": "blobHash004",
              "index": 2,
            },
          ],
          "fromId": "address5",
          "hash": "txHash015",
          "toId": "address4",
        },
      ],
    },
    {
      "blobAsCalldataGasUsed": 255000,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000,
      "excessBlobGas": 15000,
      "hash": "blockHash006",
      "number": 1006,
      "slot": 106,
      "timestamp": 2023-08-31T12:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1500,
              },
              "blobHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
              "index": 0,
            },
          ],
          "fromId": "address5",
          "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
          "toId": "address6",
        },
      ],
    },
    {
      "blobAsCalldataGasUsed": 250000,
      "blobGasPrice": 20n,
      "blobGasUsed": 5000000,
      "excessBlobGas": 10000,
      "hash": "blockHash005",
      "number": 1005,
      "slot": 105,
      "timestamp": 2023-08-28T10:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 1,
            },
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 2,
            },
          ],
          "fromId": "address2",
          "hash": "txHash012",
          "toId": "address4",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
          ],
          "fromId": "address5",
          "hash": "txHash013",
          "toId": "address4",
        },
      ],
    },
    {
      "blobAsCalldataGasUsed": 255000,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000,
      "excessBlobGas": 15000,
      "hash": "blockHash004",
      "number": 1004,
      "slot": 104,
      "timestamp": 2023-08-20T12:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
          ],
          "fromId": "address1",
          "hash": "txHash007",
          "toId": "address2",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1100,
              },
              "blobHash": "blobHash002",
              "index": 0,
            },
          ],
          "fromId": "address5",
          "hash": "txHash008",
          "toId": "address6",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1200,
              },
              "blobHash": "blobHash003",
              "index": 0,
            },
          ],
          "fromId": "address5",
          "hash": "txHash009",
          "toId": "address6",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1200,
              },
              "blobHash": "blobHash003",
              "index": 0,
            },
          ],
          "fromId": "address3",
          "hash": "txHash010",
          "toId": "address4",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1400,
              },
              "blobHash": "blobHash005",
              "index": 0,
            },
          ],
          "fromId": "address2",
          "hash": "txHash011",
          "toId": "address4",
        },
      ],
    },
    {
      "blobAsCalldataGasUsed": 255000,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000,
      "excessBlobGas": 15000,
      "hash": "blockHash003",
      "number": 1003,
      "slot": 103,
      "timestamp": 2023-08-03T12:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1100,
              },
              "blobHash": "blobHash002",
              "index": 0,
            },
            {
              "blob": {
                "size": 1100,
              },
              "blobHash": "blobHash002",
              "index": 1,
            },
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 2,
            },
          ],
          "fromId": "address2",
          "hash": "txHash005",
          "toId": "address4",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 1,
            },
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 2,
            },
          ],
          "fromId": "address2",
          "hash": "txHash006",
          "toId": "address4",
        },
      ],
    },
    {
      "blobAsCalldataGasUsed": 255000,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000,
      "excessBlobGas": 15000,
      "hash": "blockHash002",
      "number": 1002,
      "slot": 102,
      "timestamp": 2023-05-10T12:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
            {
              "blob": {
                "size": 1100,
              },
              "blobHash": "blobHash002",
              "index": 1,
            },
            {
              "blob": {
                "size": 1200,
              },
              "blobHash": "blobHash003",
              "index": 2,
            },
            {
              "blob": {
                "size": 1300,
              },
              "blobHash": "blobHash004",
              "index": 3,
            },
            {
              "blob": {
                "size": 1400,
              },
              "blobHash": "blobHash005",
              "index": 4,
            },
            {
              "blob": {
                "size": 1500,
              },
              "blobHash": "blobHash006",
              "index": 5,
            },
          ],
          "fromId": "address1",
          "hash": "txHash004",
          "toId": "address3",
        },
      ],
    },
    {
      "blobAsCalldataGasUsed": 2042780,
      "blobGasPrice": 22n,
      "blobGasUsed": 786432,
      "excessBlobGas": 15000,
      "hash": "blockHash001",
      "number": 1001,
      "slot": 101,
      "timestamp": 2022-10-16T12:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
            {
              "blob": {
                "size": 1100,
              },
              "blobHash": "blobHash002",
              "index": 1,
            },
            {
              "blob": {
                "size": 1200,
              },
              "blobHash": "blobHash003",
              "index": 2,
            },
          ],
          "fromId": "address1",
          "hash": "txHash001",
          "toId": "address2",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
          ],
          "fromId": "address3",
          "hash": "txHash002",
          "toId": "address4",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
            {
              "blob": {
                "size": 1100,
              },
              "blobHash": "blobHash002",
              "index": 1,
            },
          ],
          "fromId": "address5",
          "hash": "txHash003",
          "toId": "address6",
        },
      ],
    },
  ],
  "totalBlocks": 0,
}
`;

exports[`Block route > getAll > should get all with pagination 1`] = `
{
  "blocks": [
    {
      "blobAsCalldataGasUsed": 255000,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000,
      "excessBlobGas": 15000,
      "hash": "blockHash006",
      "number": 1006,
      "slot": 106,
      "timestamp": 2023-08-31T12:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1500,
              },
              "blobHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
              "index": 0,
            },
          ],
          "fromId": "address5",
          "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
          "toId": "address6",
        },
      ],
    },
    {
      "blobAsCalldataGasUsed": 250000,
      "blobGasPrice": 20n,
      "blobGasUsed": 5000000,
      "excessBlobGas": 10000,
      "hash": "blockHash005",
      "number": 1005,
      "slot": 105,
      "timestamp": 2023-08-28T10:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 1,
            },
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 2,
            },
          ],
          "fromId": "address2",
          "hash": "txHash012",
          "toId": "address4",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
          ],
          "fromId": "address5",
          "hash": "txHash013",
          "toId": "address4",
        },
      ],
    },
  ],
  "totalBlocks": 0,
}
`;

exports[`Block route > getByBlockNumber > should get by hash 1`] = `
{
  "blobAsCalldataGasUsed": 255000,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000,
  "excessBlobGas": 15000,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
        {
          "blob": {
            "size": 1100,
          },
          "blobHash": "blobHash002",
          "index": 1,
        },
        {
          "blob": {
            "size": 1200,
          },
          "blobHash": "blobHash003",
          "index": 2,
        },
        {
          "blob": {
            "size": 1300,
          },
          "blobHash": "blobHash004",
          "index": 3,
        },
        {
          "blob": {
            "size": 1400,
          },
          "blobHash": "blobHash005",
          "index": 4,
        },
        {
          "blob": {
            "size": 1500,
          },
          "blobHash": "blobHash006",
          "index": 5,
        },
      ],
      "fromId": "address1",
      "hash": "txHash004",
      "toId": "address3",
    },
  ],
}
`;

exports[`Block route > getByHash > should get by hash 1`] = `
{
  "blobAsCalldataGasUsed": 2042780,
  "blobGasPrice": 22n,
  "blobGasUsed": 786432,
  "excessBlobGas": 15000,
  "hash": "blockHash001",
  "number": 1001,
  "slot": 101,
  "timestamp": 2022-10-16T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
        {
          "blob": {
            "size": 1100,
          },
          "blobHash": "blobHash002",
          "index": 1,
        },
        {
          "blob": {
            "size": 1200,
          },
          "blobHash": "blobHash003",
          "index": 2,
        },
      ],
      "fromId": "address1",
      "hash": "txHash001",
      "toId": "address2",
    },
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
      ],
      "fromId": "address3",
      "hash": "txHash002",
      "toId": "address4",
    },
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
        {
          "blob": {
            "size": 1100,
          },
          "blobHash": "blobHash002",
          "index": 1,
        },
      ],
      "fromId": "address5",
      "hash": "txHash003",
      "toId": "address6",
    },
  ],
}
`;
